# bakatsugi

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  script.ld
.github/workflows/: checks.yml
bakatsugi-injector/: Cargo.toml
bakatsugi-injector/src/: inspection.rs  lib.rs  main.rs
bakatsugi-payload/: Cargo.toml  build.rs
bakatsugi-payload/src/: lib.rs  payload.c  payload_stub.asm
bakatsugi-protocol/: Cargo.toml
bakatsugi-protocol/src/: lib.rs
bakatsugi-stage2/: Cargo.toml
bakatsugi-stage2/src/: lib.rs  trampoline.rs
c/: bakatsugi.h
examples/gettimeofday-c/: .gitignore  Makefile  libpatch.c
examples/more-own/: Makefile  example.c  libpatch.c
examples/simple-c/: Makefile  example.c  libpatch.c
examples/simple-own/: .gitignore  example.c  libpatch.c
src/: bakals.rs  injector.rs  inspection.rs  lib.rs  main.rs  payload.asm  payload.c  payload_stub.asm  unwind.rs
