[package]
name = "bakatsugi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
goblin = "0.4.3"
nix = "0.23.1"
proc-maps = "0.2.0"
regex = "1.5.4"
ctor = "0.1.21"

[build-dependencies]
anyhow = "1.0.53"
goblin = "0.4.3"
cargo-emit = "0.2.1"
const-gen = "1.0.0"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "injector"
path = "src/injector.rs"
