[package]
name = "bakatsugi"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "bakatsugi-stage2",
    "bakatsugi-payload",
    "bakatsugi-protocol",
]

[dependencies]
bakatsugi-payload = { path = "bakatsugi-payload" }
bakatsugi-stage2 = { path = "bakatsugi-stage2", artifact = "cdylib" }
bakatsugi-protocol = { path = "bakatsugi-protocol" }
anyhow = "1.0.53"
goblin = "0.5.1"
nix = "0.23.1"
proc-maps = "0.2.0"
regex = "1.5.4"
ctor = "0.1.21"
rand = "0.8.4"
clap = { version = "3.1.2", features = ["derive"] }
unwind = { version = "0.4.1", features = ["ptrace"] }

[profile.release]
strip = true
