[package]
name = "bakatsugi-injector"
version = "0.1.0"
edition = "2021"

[dependencies]
bakatsugi-payload = { path = "../bakatsugi-payload" }
bakatsugi-stage2 = { path = "../bakatsugi-stage2", artifact = "cdylib" }
anyhow = "1.0.53"
goblin = "0.5.1"
nix = "0.23.1"
proc-maps = "0.2.0"
regex = "1.5.4"
ctor = "0.1.21"
rand = "0.8.4"
clap = { version = "3.1.2", features = ["derive"] }
