[package]
name = "bakatsugi-payload"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
static_assertions = "1.1.0"

[dev-dependencies]
goblin = "0.5.1"

[build-dependencies]
anyhow = "1.0.53"
goblin = "0.5.1"
cargo-emit = "0.2.1"
const-gen = "1.0.0"
