[package]
name = "bakatsugi-stage2"
version = "0.1.0"
edition = "2021"

[dependencies]
bakatsugi-payload = { path = "../bakatsugi-payload" }
bakatsugi-protocol = { path = "../bakatsugi-protocol" }
anyhow = "1.0.53"
goblin = "0.5.1"
nix = "0.23.1"
proc-maps = "0.2.0"
regex = "1.5.4"
ctor = "0.1.21"
rand = "0.8.4"
libloading = "0.7"

[lib]
crate-type = ["cdylib"]
